# stock_DCbot

./: .gitignore  README.md  app.py  pyproject.toml
stock_bot/: app.py
